backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clube-xadrez-ingress
  namespace: clube-xadrez
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: api.dataiesb.com
    http:
      paths:
      - path: /xadrez
        pathType: Prefix
        backend:
          service:
            name: clube-xadrez-backend
            port:
              number: 80
